Wire up face detection.
Change-Id: I7dec3cb539c3372de54ed8cbb95f0571a06eaa9d

--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -49,8 +49,7 @@
                     android:id="@+id/viewArticleImage"
                     style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
 
             <LinearLayout
