--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -30,8 +30,7 @@
                     style="@style/SimpleDraweeViewPlaceholder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:transitionName="@string/transition_news_item"
-                    android:scaleType="centerCrop" />
+                    android:transitionName="@string/transition_news_item" />
 
                 <View
                     android:id="@+id/view_news_fullscreen_gradient"
