--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:transitionName="@string/transition_random_activity">
 
-    <androidx.viewpager.widget.ViewPagerWithVelocity
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/random_item_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
