--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards.xml
@@ -69,7 +69,7 @@
 
         </LinearLayout>
 
-        <androidx.viewpager.widget.ViewPagerWithVelocity
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/cardsViewPager"
             android:layout_width="0dp"
             android:layout_height="0dp"
