--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <org.wikipedia.readinglist.NoSwipeViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/fragment_main_view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
