--- a/app/src/main/res/layout/fragment_references_pager.xml
+++ b/app/src/main/res/layout/fragment_references_pager.xml
@@ -46,7 +46,7 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:background="?attr/material_theme_border_color" />
 
-        <org.wikipedia.views.WrapContentViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/reference_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
