--- a/app/src/main/res/layout/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards.xml
@@ -69,7 +69,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/bottomButtonContainer"
         app:layout_constraintTop_toBottomOf="@id/wikiLanguageDropdownContainer">
-        <androidx.viewpager.widget.ViewPagerWithVelocity
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/cardsViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
