Convert Gallery to ViewPager2.
Change-Id: Ice48ed9bd062e5ecfeb271bac524cc680a854fa5

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical"
         android:visibility="gone" />
 
-    <com.duolingo.open.rtlviewpager.RtlViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/gallery_item_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
