Convert reference dialog to ViewPager2.
Change-Id: I1d7d4cb8dcd553219eaeef7e65ae3a6ba9390732

--- a/app/src/main/res/layout/fragment_onboarding_pager.xml
+++ b/app/src/main/res/layout/fragment_onboarding_pager.xml
@@ -41,7 +41,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                />
+                app:tabIndicator="@null"
+                app:tabPaddingStart="8dp"
+                app:tabPaddingEnd="8dp"
+                app:tabBackground="@drawable/shape_tab_dot"
+                app:tabGravity="center" />
 
             <FrameLayout
                 android:layout_width="wrap_content"
