--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="actionBarTheme">@style/ToolbarTheme</item>
         <item name="actionBarStyle">@style/ToolbarStyle</item>
+        <item name="popupTheme">@style/ToolbarPopupTheme</item>
         <item name="actionModeStyle">@style/ActionModeStyle</item>
 
         <item name="searchViewStyle">@style/SearchViewStyle</item>
@@ -55,7 +56,7 @@
 
     <style name="AppTheme.ActionBar.SuggestedEdits">
         <item name="actionBarTheme">@style/PageToolbarTheme</item>
-        <item name="actionBarStyle">@style/SuggestedEditsStyle</item>
+        <item name="actionBarStyle">@style/SuggestedEditsToolbarStyle</item>
     </style>
 
     <style name="AppTheme.ActionBar.Page">
@@ -131,11 +132,15 @@
         <item name="titleTextStyle">@style/PageToolbarTitleText</item>
     </style>
 
-    <style name="SuggestedEditsStyle" parent="@style/Widget.AppCompat.ActionBar">
+    <style name="SuggestedEditsToolbarStyle" parent="@style/Widget.AppCompat.ActionBar">
         <item name="background">?attr/paper_color</item>
         <item name="navigationIcon">?attr/homeAsUpIndicator</item>
         <item name="elevation">0dp</item>
         <item name="titleTextStyle">@style/PageToolbarTitleText</item>
+    </style>
+
+    <style name="ToolbarPopupTheme" parent="ThemeOverlay.MaterialComponents">
+        <item name="android:backgroundTint">?android:colorBackground</item>
     </style>
 
     <style name="BottomNavigationTextAppearanceInactive">
