Update and consolidate toolbar styles and attributes.
Change-Id: Ie76a0c408061daaaf261f5297ecb71d6c287c5a6

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -36,8 +36,7 @@
                 android:id="@+id/gallery_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/black26"
-                android:theme="@style/ToolbarTheme" />
+                android:background="@color/black26" />
 
             <View
                 android:id="@+id/gallery_toolbar_gradient"
