Use FragmentContainerView instead of deprecated <fragment> tag.
Change-Id: If295606b32a4526d8433174ee94d3d518d675d52

--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -6,12 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/page_fragment"
         android:name="org.wikipedia.page.PageFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout="@layout/fragment_page"
         tools:layout="@layout/fragment_page" />
 
     <FrameLayout
