--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -112,14 +112,14 @@
         android:layout_weight="1"
         android:background="?android:windowBackground">
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_search_results"
             android:name="org.wikipedia.search.SearchResultsFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout="@layout/fragment_search_results" />
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/search_panel_recent"
             android:name="org.wikipedia.search.RecentSearchesFragment"
             android:layout_width="match_parent"
