--- a/app/src/main/res/values/styles_dark.xml
+++ b/app/src/main/res/values/styles_dark.xml
@@ -88,6 +88,7 @@
         <item name="color_group_56">@color/accent50</item>
         <item name="color_group_57">@color/green30</item>
         <item name="color_group_58">@color/green50</item>
+        <item name="color_group_59">@color/base50</item>
 
     </style>
 
