--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -48,7 +48,7 @@
         android:id="@+id/taskTitleNewLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/taskTitle"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
         android:layout_marginStart="4dp"
         android:textSize="@dimen/suggested_edits_message_textview_text_size"
