--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:paddingTop="8dp"
-            android:paddingBottom="4dp"
+            android:paddingBottom="5dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:textAlignment="center"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:paddingTop="16dp"
+            android:paddingTop="5dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:clipChildren="false"
@@ -116,14 +116,19 @@
 
         <ProgressBar
             android:id="@+id/publishProgressBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center" />
+
+        <ProgressBar
+            android:id="@+id/publishProgressBarComplete"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_gravity="center"
             style="?android:attr/progressBarStyleHorizontal"
             android:indeterminate="false"
-            android:max="1000"
-            android:progress="600"
-            android:secondaryProgress="1000"
+            android:max="100"
+            android:secondaryProgress="100"
             android:progressDrawable="@drawable/circular_progress" />
 
         <ImageView
