--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -233,6 +233,10 @@
             android:key="@string/preference_key_image_tags_onboarding_shown"
             android:title="@string/preference_key_image_tags_onboarding_shown" />
 
+        <SwitchPreferenceCompat
+            android:key="@string/preference_key_image_zoom_tooltip_shown"
+            android:title="@string/preference_key_image_zoom_tooltip_shown" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_developer_reading_list_category">
