--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -113,6 +113,7 @@
     <string name="preference_key_suggested_edits_override_counts">suggestedEditsOverrideCounts</string>
     <string name="preference_key_suggested_edits_override_edits">suggestedEditsOverrideEdits</string>
     <string name="preference_key_suggested_edits_override_reverts">suggestedEditsOverrideReverts</string>
+    <string name="preference_key_pcs_to_mobilehtml_conversion_attempts">pcsToMobileHtmlConversionAttempts</string>
     <string name="preference_key_pcs_to_mobilehtml_conversion_complete">pcsToMobileHtmlConversionComplete</string>
     <string name="preference_key_image_tags_onboarding_shown">imageTagsOnboardingShown</string>
 </resources>
