--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -82,6 +82,8 @@
         <item name="color_group_57">@color/green90</item>
         <item name="color_group_58">@color/green30</item>
         <item name="color_group_59">@color/base30</item>
+        <item name="color_group_60">@color/base80</item>
+        <item name="color_group_61">@color/black26</item>
         <item name="action_mode_green_background">@color/green50</item>
         <item name="image_tags_onboarding_image">@drawable/ic_image_tags_onboarding_light</item>
 
