--- a/app/src/main/res/layout/view_description_edit.xml
+++ b/app/src/main/res/layout/view_description_edit.xml
@@ -66,7 +66,6 @@
                 android:clickable="true"
                 android:contentDescription="@string/description_edit_save"
                 android:padding="12dp"
-                android:tint="?attr/themed_icon_color"
                 app:srcCompat="@drawable/ic_check_black_24dp" />
 
         </LinearLayout>
@@ -121,9 +120,9 @@
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
                         android:orientation="vertical"
-                        android:paddingStart="@dimen/list_item_horizontal_padding"
+                        android:paddingStart="28dp"
                         android:paddingTop="15dp"
-                        android:paddingEnd="@dimen/list_item_horizontal_padding"
+                        android:paddingEnd="28dp"
                         android:visibility="gone"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible">
@@ -166,15 +165,13 @@
                             android:id="@+id/view_description_edit_text_layout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="12dp"
+                            android:layout_marginStart="16dp"
                             android:layout_marginTop="8dp"
-                            android:layout_marginEnd="12dp"
+                            android:layout_marginEnd="16dp"
                             android:gravity="start"
                             android:textAlignment="viewStart"
                             android:hint="@string/description_edit_text_hint"
-
                             app:boxBackgroundColor="?attr/main_toolbar_color"
-
                             app:counterEnabled="true"
                             app:counterMaxLength="@integer/description_max_chars"
                             app:counterOverflowTextAppearance="@style/CounterOverflowTextAppearance">
@@ -197,14 +194,14 @@
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:layout_gravity="end"
-                            android:layout_marginTop="12dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="16dp"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:clickable="true"
                             android:contentDescription="@string/description_edit_help_title"
                             android:padding="12dp"
                             app:srcCompat="@drawable/ic_mic_black_24dp"
-                            app:tint="?attr/material_theme_secondary_color" />
+                            app:tint="?attr/material_theme_de_emphasised_color" />
 
                     </FrameLayout>
                 </LinearLayout>
