--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -103,6 +103,7 @@
                         android:layout_marginEnd="0dp"
                         android:enabled="false"
                         android:text="@string/email_recommendation_message"
+                        android:textColor="?attr/material_theme_secondary_color"
                         android:textSize="12sp" />
 
                     <Button
