Interface for adding arbitrary tags.
Change-Id: Ib128267b7a39e6afab8481e498ba974da36e5829

--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -57,6 +57,7 @@
             android:ellipsize="end"
             android:textColor="?attr/color_group_59"
             android:textColorLink="?attr/color_group_59"
+            android:textIsSelectable="true"
             tools:text="Lorem ipsum"/>
 
         <LinearLayout
