--- a/app/src/main/res/layout/activity_suggested_edits_feed_card_image_tags.xml
+++ b/app/src/main/res/layout/activity_suggested_edits_feed_card_image_tags.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/image_tag_fragment"
+        android:id="@+id/imageTagFragment"
         android:name="org.wikipedia.suggestededits.SuggestedEditsImageTagsFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
