Update design of custom tag search.
Change-Id: I83645bbc3e96bfb1f602fc8c35d2d0ca0e3df588

--- a/app/src/main/res/layout/item_wikidata_label.xml
+++ b/app/src/main/res/layout/item_wikidata_label.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     android:background="?attr/selectableItemBackground">
 
     <TextView
@@ -20,6 +22,7 @@
         android:id="@+id/labelDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:textSize="12sp"
         android:textColor="?attr/material_theme_secondary_color"
         tools:text="Item description" />
