--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHeight_percent="0.6"
+            app:layout_constraintHeight_percent="0.65"
             android:layout_marginTop="64dp"
             app:actualImageScaleType="fitCenter"
             app:fadeDuration="0" />
@@ -94,13 +94,20 @@
                 tools:text="Lorem ipsum"
                 tools:visibility="visible"/>
 
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/tagsChipGroup"
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:flexWrap="wrap"
-                app:justifyContent="center"/>
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="4dp"
+                android:scrollbars="none">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/tagsChipGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:singleLine="true" />
+
+            </HorizontalScrollView>
 
         </LinearLayout>
 
