--- a/app/src/main/res/layout/activity_suggested_edits_feed_card_image_tags.xml
+++ b/app/src/main/res/layout/activity_suggested_edits_feed_card_image_tags.xml
@@ -7,13 +7,32 @@
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/imageTagFragment"
-        android:name="org.wikipedia.suggestededits.SuggestedEditsImageTagsFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        tools:layout="@layout/fragment_suggested_edits_image_tags_item" />
+        android:layout_weight="1">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/imageTagFragment"
+            android:name="org.wikipedia.suggestededits.SuggestedEditsImageTagsFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_suggested_edits_image_tags_item" />
+
+        <ImageView
+            android:id="@+id/addContributionLandscapeImage"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/button_shape_border_light"
+            android:contentDescription="@null"
+            android:padding="4dp"
+            android:tint="?attr/colorAccent"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_check_black_24dp" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/addContributionButton"
