--- a/app/src/main/res/layout/view_description_edit.xml
+++ b/app/src/main/res/layout/view_description_edit.xml
@@ -158,9 +158,6 @@
                         android:paddingTop="7dp"
                         android:paddingBottom="7dp">
 
-                        <!-- todo: this class has a lot of ViewGroups. TextInputLayout (a subclass of LinearLayout)
-                                   adds another. try to collapse this group into others. the same change should
-                                   probably be attempted for other TextInputLayout usages -->
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/view_description_edit_text_layout"
                             android:layout_width="match_parent"
@@ -182,6 +179,7 @@
                                 android:imeOptions="flagNoExtractUi|actionDone"
                                 android:inputType="textMultiLine"
                                 android:drawableEnd="@drawable/ic_spacer_24dp"
+                                android:lineSpacingExtra="6sp"
                                 android:textSize="16sp">
 
                                 <requestFocus />
