--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -91,6 +91,7 @@
             app:tint="?attr/colorAccent" />
 
         <TextView
+            android:id="@+id/primaryActionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
