--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -94,20 +94,14 @@
                 tools:text="Lorem ipsum"
                 tools:visibility="visible"/>
 
-            <HorizontalScrollView
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/tagsChipGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="4dp"
-                android:scrollbars="none">
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/tagsChipGroup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:singleLine="true" />
-
-            </HorizontalScrollView>
+                app:flexWrap="wrap"
+                app:justifyContent="center"/>
 
         </LinearLayout>
 
