--- a/app/src/main/res/layout/group_find_references_in_page.xml
+++ b/app/src/main/res/layout/group_find_references_in_page.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/find_in_page_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="top">
 
     <TextView
-        android:id="@+id/find_in_page_input"
-        android:layout_width="0dp"
+        android:id="@+id/reference_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
+        android:layout_marginStart="16dp"
         android:maxLines="1"
-        android:text="REFERENCE"
-        app:closeIcon="@null"
-        app:iconifiedByDefault="false"
-        app:searchIcon="@null" />
+        android:textColor="?attr/colorAccent"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/reference_count"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textSize="12sp"
+        tools:text="99/99"
+        tools:visibility="visible" />
 
     <View
         android:layout_width="1dp"
