--- a/app/src/main/res/layout/item_wikidata_label.xml
+++ b/app/src/main/res/layout/item_wikidata_label.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:textColor="?attr/material_theme_primary_color"
+        android:lineSpacingExtra="2dp"
         tools:text="Item label" />
 
     <TextView
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:textSize="12sp"
+        android:lineSpacingExtra="4dp"
         android:textColor="?attr/material_theme_secondary_color"
         tools:text="Item description" />
 </LinearLayout>
