--- a/app/src/main/res/layout/group_find_references_in_page.xml
+++ b/app/src/main/res/layout/group_find_references_in_page.xml
@@ -10,8 +10,8 @@
     <TextView
         android:id="@+id/reference_label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_height="48dp"
+        android:gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:maxLines="1"
         android:textColor="?attr/colorAccent"
