--- a/app/src/main/res/layout/view_suggested_edit_card.xml
+++ b/app/src/main/res/layout/view_suggested_edit_card.xml
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
+                android:layout_marginTop="10dp"
                 android:fontFamily="serif"
                 android:lineSpacingExtra="4sp"
                 android:maxLines="2"
