--- a/app/src/main/res/layout/group_find_references_in_page.xml
+++ b/app/src/main/res/layout/group_find_references_in_page.xml
@@ -10,8 +10,8 @@
     <TextView
         android:id="@+id/reference_label"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
         android:background="?android:attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:maxLines="1"
