Rename styles and remove unnecessary stuff.
Change-Id: Ie7d1f7bb185650710dad282fa05715dcf3ff63d0

--- a/app/src/main/res/layout/dialog_link_preview.xml
+++ b/app/src/main/res/layout/dialog_link_preview.xml
@@ -30,7 +30,7 @@
 
                 <ImageView
                     android:id="@+id/link_preview_thumbnail"
-                    style="@style/SimpleDraweeViewPlaceholder"
+                    style="@style/ImageViewDefault"
                     android:layout_width="@dimen/defaultListItemSize"
                     android:layout_height="@dimen/defaultListItemSize"
                     android:layout_gravity="center_vertical"
