--- a/app/src/main/res/layout/view_description_edit_read_article_bar.xml
+++ b/app/src/main/res/layout/view_description_edit_read_article_bar.xml
@@ -51,7 +51,7 @@
 
     <ImageView
         android:id="@+id/viewImageThumbnail"
-        style="@style/SimpleDraweeViewPlaceholder"
+        style="@style/ImageViewDefault"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
