--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -27,7 +27,7 @@
 
                 <org.wikipedia.views.FaceAndColorDetectImageView
                     android:id="@+id/view_news_fullscreen_header_image"
-                    style="@style/SimpleDraweeViewPlaceholder"
+                    style="@style/ImageViewDefault"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:transitionName="@string/transition_news_item" />
