--- a/app/src/main/res/layout/fragment_random_item.xml
+++ b/app/src/main/res/layout/fragment_random_item.xml
@@ -44,7 +44,7 @@
 
             <org.wikipedia.views.FaceAndColorDetectImageView
                 android:id="@+id/view_random_article_card_image"
-                style="@style/SimpleDraweeViewPlaceholder"
+                style="@style/ImageViewDefault"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop" />
