--- a/app/src/main/res/layout/item_on_this_day_pages.xml
+++ b/app/src/main/res/layout/item_on_this_day_pages.xml
@@ -43,7 +43,7 @@
 
         <org.wikipedia.views.FaceAndColorDetectImageView
             android:id="@+id/page_list_item_image"
-            style="@style/SimpleDraweeViewPlaceholder"
+            style="@style/ImageViewDefault"
             android:layout_width="72dp"
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
