--- a/app/src/main/res/layout/view_card_featured_article.xml
+++ b/app/src/main/res/layout/view_card_featured_article.xml
@@ -19,7 +19,7 @@
 
         <org.wikipedia.views.FaceAndColorDetectImageView
             android:id="@+id/view_featured_article_card_image"
-            style="@style/SimpleDraweeViewPlaceholder"
+            style="@style/ImageViewDefault"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@null" />
