Properly integrate with Install Referrer API.
Change-Id: I577c187b057f3dace11152be261e7e0074dd99cd

--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -115,4 +115,5 @@
     <string name="preference_key_pcs_to_mobilehtml_conversion_attempts">pcsToMobileHtmlConversionAttempts</string>
     <string name="preference_key_pcs_to_mobilehtml_conversion_complete">pcsToMobileHtmlConversionComplete</string>
     <string name="preference_key_image_tags_onboarding_shown">imageTagsOnboardingShown</string>
+    <string name="preference_key_install_referrer_attempts">installReferrerAttempts</string>
 </resources>
