--- a/app/src/main/res/layout/fragment_random_item.xml
+++ b/app/src/main/res/layout/fragment_random_item.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/view_random_article_card_image"
                 style="@style/ImageViewDefault"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="160dp"
                 android:scaleType="centerCrop" />
 
             <View
