Even more proper laying out of the lead image.
Change-Id: Ie087575208d050e99d4258500d71ac7ba3eb669d

--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -29,7 +29,7 @@
         <org.wikipedia.page.leadimages.PageHeaderView
             android:id="@+id/page_header_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="16dp"
             android:visibility="gone" />
 
         <org.wikipedia.views.WikiErrorView
