--- a/app/src/main/res/layout/view_card_featured_article.xml
+++ b/app/src/main/res/layout/view_card_featured_article.xml
@@ -22,7 +22,7 @@
             android:id="@+id/view_featured_article_card_image"
             style="@style/ImageViewDefault"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="192dp"
             android:contentDescription="@null"/>
 
         <View
