Make image caption and article description max length to 250

--- a/app/src/main/res/layout/view_description_edit.xml
+++ b/app/src/main/res/layout/view_description_edit.xml
@@ -180,6 +180,7 @@
                                 android:inputType="textMultiLine"
                                 android:drawableEnd="@drawable/ic_spacer_24dp"
                                 android:lineSpacingExtra="6sp"
+                                android:maxLength="@integer/description_max_chars"
                                 android:textSize="16sp">
 
                                 <requestFocus />
