Rudimentary swipe gesture.
Change-Id: I224d3aa07d206ab9e98eba10a1d27ac4287f7046

--- a/app/src/main/res/layout/view_list_card.xml
+++ b/app/src/main/res/layout/view_list_card.xml
@@ -18,7 +18,7 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/view_list_card_header" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <org.wikipedia.views.NavMenuAwareRecyclerView
         android:id="@+id/view_list_card_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
