--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:layout_gravity="start"
     tools:context=".main.MainActivity">
 
-    <FrameLayout
+    <org.wikipedia.views.FrameLayoutNavMenuTriggerer
+        android:id="@+id/navigation_drawer_triggerer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -73,7 +74,7 @@
                     app:tint="?attr/main_toolbar_title_color" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
-    </FrameLayout>
+    </org.wikipedia.views.FrameLayoutNavMenuTriggerer>
 
     <org.wikipedia.main.MainDrawerView
         android:id="@+id/navigation_drawer_view"
